# amanah-casper

./: .dockerignore  .env.deployed  .env.policyengine  .env.quorumv2  .env.quorumv4  .env.quorumv5  .env.timelock  .env.treasuryb  .env.zkreserves.v1  .gitignore  CODE_OF_CONDUCT.md  COMPETITION.md  CONTRIBUTING.md  DEMO.md  DEPLOY_WEB.md  HOSTING.md  LAUNCH.md  LICENSE  MAINNET.md  POLICY.md  README.md  RESEARCH.md  ROADMAP.md  SECURITY.md  SOC2.md  SUBMISSION.md  TESTING.md  THREAT_MODEL.md  USER_STEPS.md  USE_CASE.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: agent-loop.yml  ci.yml  codeql.yml  uptime.yml
_design_import/design_handoff_amanah_rwa/: Agent.dc.html  Amanah.dc.html  Connect.dc.html  Dashboard.dc.html  README.md  Writing.dc.html
agent/: .env.example  Dockerfile  README.md  fly.toml  package-lock.json  package.json  tsconfig.json
agent/src/: attest.ts  attested-inference.ts  audit-claims.ts  audit-consistency.ts  audit.ts  auditor-select.ts  buy-verified-reasoning.ts  casper.ts  config.ts  consensus.ts  credit-reputation.ts  cspr-mcp.ts  demo-deadman.ts  deploy-auditor.ts  deploy-mainnet.ts  deploy-quorum-v4.ts  deploy-quorum-v5.ts  deploy-quorum.ts  deploy-repv3.ts  deploy-timelock.ts  deploy-treasury-b.ts  deploy-zk-reserves.ts  deploy-zk.ts  deploy.ts  execute.ts  find-state-seeds.ts  go-live.ts  governance.ts  guard.ts  index.ts  ingest.ts  liabilities.ts  migrate-compliance.ts  migrate-custody.ts  migrate-vault-v4.ts  migrate-vault-v5.ts  migrate-vault-v6.ts  migrate-vault-v7.ts  migrate-vault-v8.ts  notify.ts  (+21 more)
agent/src/lib/: codec.ts
agent/src/prompts/: decide.ts
agent/src/tests/: attested-inference.test.ts  audit.test.ts  auditor-select.test.ts  chain.itest.ts  codec.test.ts  consensus.test.ts  execute.test.ts  governance.test.ts  guard.test.ts  ingest.test.ts  liabilities.test.ts  notify.test.ts  range-proof.test.ts  reason.test.ts  simulate.test.ts  zk-reserves.test.ts  zk.test.ts
bot/: .env.example  README.md  package-lock.json  package.json
bot/src/: bot.test.ts  bot.ts
contracts/: .gitignore  Cargo.toml  Odra.toml  README.md  build.rs  rust-toolchain.toml
contracts/src/: attestation_log.rs  auditor_quorum.rs  common.rs  compliance_registry.rs  governance_timelock.rs  lib.rs  payment_token.rs  policy_engine.rs  reputation_registry.rs  rwa_vault.rs  spend_gate.rs  zk_kyc.rs  zk_reserves.rs
contracts/tests/: integration.rs
mcp/: .env.example  README.md  mcp-client-config.example.json  package-lock.json  package.json  tsconfig.json
mcp/src/: chain.ts  server.ts  smoke.ts
mcp/src/tests/: chain.test.ts
scripts/: README.md  demo.ps1  deploy.ps1  deploy.sh  keygen.ps1  keygen.sh  test-all.ps1
scripts/video/: README.md  amanah-demo.srt  narrate.py  record.mjs
signal-service/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
signal-service/src/: server.ts  signal.test.ts  signal.ts
skill/: SKILL.md
skill/references/: llms.txt
web/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  vercel.json
web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/app/agent/: loading.tsx  page.tsx
web/app/compliance/: loading.tsx  page.tsx
web/app/connect/: page.tsx
web/components/: AlertBell.tsx  Heartbeat.tsx  HeroWave.tsx  LiveFeed.tsx  Nav.tsx  PageSkeleton.tsx  ScoreCard.tsx  SimulationCard.tsx  SystemStatus.tsx  ThemeToggle.tsx
web/lib/: casper-sdk.ts  cspr.ts  data.ts  format.test.ts  merkle-verify.ts  mock.ts  range-verify.ts  select-verify.ts  useCsprClick.ts  view-types.ts  zk-verify.test.ts  zk-verify.ts
web/public/: auditor-assignment.json  liabilities.json  redteam.json  simulation.json
web/tests/: click-live.spec.ts  global-setup.ts  qa.spec.ts  resilience.spec.ts
(+24 files in other folders)
