[package]
name = "amanah-contracts"
description = "Amanah - autonomous compliant RWA treasury agent contracts for Casper"
edition = "2021"
version = "0.1.0"

[dependencies]
odra = { version = "2.8.1", default-features = false }
# CEP-18 test token (x402 payment asset) — Odra's stock implementation.
# default-features = false drops the optional eip712 deps we don't need.
odra-modules = { version = "2.8.1", default-features = false }

[dev-dependencies]
odra-test = "2.8.1"

[build-dependencies]
odra-build = "2.8.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.8.1"

[[bin]]
name = "amanah_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "amanah_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
