[package]
name = "amanah-contracts"
description = "Amanah - autonomous compliant RWA treasury agent contracts for Casper"
edition = "2021"
version = "0.1.0"

[dependencies]
odra = { version = "2.8.1", default-features = false }
# CEP-18 + CEP-3009 (transfer_with_authorization) for the x402 PaymentToken.
# eip712 feature is required by CEP-3009 (casper-eip-712); it's in odra-modules'
# default set, enabled explicitly here since we set default-features = false.
odra-modules = { version = "2.8.1", default-features = false, features = ["eip712"] }
# Real ZK KYC: on-chain Schnorr NIZK verification over ed25519 (no_std/WASM).
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
blake2 = { version = "0.10", default-features = false }

[dev-dependencies]
odra-test = "2.8.1"
# `cargo odra test` fix: schemars 0.8.22 (pulled by odra's test stack via the
# `indexmap1` feature) does `Map<K,V> = IndexMap<K,V>`, which only type-checks
# when indexmap 1.9.3 exposes its default `S = RandomState` — gated behind
# `#[cfg(has_std)]`, emitted only when indexmap's `std` feature is on. The casper
# no_std deps pull indexmap with default-features=false, so `S` has no default and
# the build fails. Forcing the `std` feature here (dev-only — not in the wasm
# build) makes has_std true and restores the default. ponytail: transitive-dep pin.
indexmap = { version = "=2.14.0", features = ["std"] }

[build-dependencies]
odra-build = "2.8.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.8.1"

[[bin]]
name = "amanah_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "amanah_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
